hello-application/hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2022-12-12T14:05:10Z"
  generation: 1
  name: ingress-hello
  namespace: hello-ns
  resourceVersion: "146090"
  uid: 7b30b0c0-9fc4-4006-8ba6-b424753c2576
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: hello-service
            port:
              number: 80
        path: /hello
        pathType: Exact
status:
  loadBalancer:
    ingress:
    - ip: 192.168.0.211
    - ip: 192.168.0.212
