hello-application/hello-metallb.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-metallb
  namespace: hello-ns
spec:
  selector:
    app: hello-app
  type: LoadBalancer
  loadBalancerIP: "192.168.0.202"
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
