hello-application/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  ports:
    - name: hello-world
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: load-balancer-example
  type: ClusterIP
